Billlrequisitiontype and costcentermanagermap

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -207,6 +207,9 @@
     <Compile Include="Models\BatchPaymentMaster.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BillRequisitionType.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BoardOfDirector.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
@@ -271,6 +274,9 @@
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ConvertedProductDetail.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\CostCenterManagerMap.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Country.cs">
