Bill requisition environment setup

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -297,6 +297,7 @@
     <Compile Include="Implementation\Realestate\ITeamService.cs" />
     <Compile Include="Implementation\Realestate\TeamService.cs" />
     <Compile Include="Implementation\RentProductionService.cs" />
+    <Compile Include="Implementation\BillRequisitionService.cs" />
     <Compile Include="Implementation\ShareHolderService.cs" />
     <Compile Include="Implementation\SMSService\SMSServices.cs" />
     <Compile Include="Implementation\StockAdjustService.cs" />
@@ -359,6 +360,7 @@
     <Compile Include="Interface\IPFDataService.cs" />
     <Compile Include="Interface\IProductDetailService.cs" />
     <Compile Include="Interface\IRentProductionService.cs" />
+    <Compile Include="Interface\IBillRequisitionService.cs" />
     <Compile Include="Interface\IShareHolderService.cs" />
     <Compile Include="Interface\ISmsServices.cs" />
     <Compile Include="Interface\IStockAdjustService.cs" />
