--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -473,6 +473,7 @@
     <Compile Include="Controllers\KGRECustomerMapHeadGlController.cs" />
     <Compile Include="Controllers\MoneyReceiptProcess\RealStateMoneyReceiptController.cs" />
     <Compile Include="Controllers\ProductBookingController.cs" />
+    <Compile Include="Controllers\BillRequisitionController.cs" />
     <Compile Include="Controllers\SeedController.cs" />
     <Compile Include="Controllers\ExpenseController.cs" />
     <Compile Include="Controllers\TeamMakingProcessController.cs" />
@@ -5583,6 +5584,8 @@
     <Content Include="Views\Report\BankStatementSeed.cshtml" />
     <Content Include="Views\Procurement\ProcurementFieldSalesOrderList.cshtml" />
     <Content Include="Views\Procurement\ProcurementFieldSalesOrderSlave.cshtml" />
+    <Content Include="Views\BillRequisition\CreateOrEdit.cshtml" />
+    <Content Include="Views\BillRequisition\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
