Cost manager map added

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -535,6 +535,7 @@
     <Compile Include="ServiceModel\RentProductionDetailModel.cs" />
     <Compile Include="ServiceModel\RentProductionModel.cs" />
     <Compile Include="ServiceModel\RequisitionItemDetailModel.cs" />
+    <Compile Include="ServiceModel\CostCenterManagerMapModel.cs" />
     <Compile Include="ServiceModel\ShareHolderModel.cs" />
     <Compile Include="ServiceModel\SmsModel.cs" />
     <Compile Include="ServiceModel\StockAdjustDetailModel.cs" />
