--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5586,6 +5586,7 @@
     <Content Include="Views\Procurement\ProcurementFieldSalesOrderSlave.cshtml" />
     <Content Include="Views\BillRequisition\CreateOrEdit.cshtml" />
     <Content Include="Views\BillRequisition\Index.cshtml" />
+    <Content Include="Views\BillRequisition\CostCenterManagerMap.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
