--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -207,6 +207,12 @@
     <Compile Include="Models\BatchPaymentMaster.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BillRequisitionDetail.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BillRequisitionMaster.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BillRequisitionType.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
