--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -468,6 +468,7 @@
     <Compile Include="ServiceModel\AccountSignatoryService.cs" />
     <Compile Include="ServiceModel\Approval_Process_Model\ApprovalSystemViewModel.cs" />
     <Compile Include="ServiceModel\BatchPaymentMasterModel.cs" />
+    <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
     <Compile Include="ServiceModel\BookingHeadServiceModel.cs" />
     <Compile Include="ServiceModel\DropDown.cs" />
     <Compile Include="ServiceModel\ErpLogViewModel.cs" />
