--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5585,6 +5585,7 @@
     <Content Include="Views\Procurement\ProcurementFieldSalesOrderList.cshtml" />
     <Content Include="Views\Procurement\ProcurementFieldSalesOrderSlave.cshtml" />
     <Content Include="Views\BillRequisition\CostCenterManagerMap.cshtml" />
+    <Content Include="Views\BillRequisition\BillRequisitionMasterSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
