Bill requisition type crud done

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -470,6 +470,7 @@
     <Compile Include="ServiceModel\BatchPaymentMasterModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
     <Compile Include="ServiceModel\BookingHeadServiceModel.cs" />
+    <Compile Include="ServiceModel\BillRequisitionTypeModel.cs" />
     <Compile Include="ServiceModel\DropDown.cs" />
     <Compile Include="ServiceModel\ErpLogViewModel.cs" />
     <Compile Include="ServiceModel\ExpenseModel.cs" />
