--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -210,6 +210,9 @@
     <Compile Include="Models\BillRequisitionDetail.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BillRequisitionItem.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BillRequisitionMaster.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
