Bill requisition item done

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5587,6 +5587,7 @@
     <Content Include="Views\BillRequisition\CostCenterManagerMap.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionMasterSlave.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionType.cshtml" />
+    <Content Include="Views\BillRequisition\BillRequisitionItem.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
