--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -469,6 +469,7 @@
     <Compile Include="ServiceModel\Approval_Process_Model\ApprovalSystemViewModel.cs" />
     <Compile Include="ServiceModel\BatchPaymentMasterModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
+    <Compile Include="ServiceModel\BillRequisitionItemModel.cs" />
     <Compile Include="ServiceModel\BookingHeadServiceModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionTypeModel.cs" />
     <Compile Include="ServiceModel\DropDown.cs" />
