model added and updated

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -108,6 +108,9 @@
     <Compile Include="Models\Accounting_CostCenter.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Accounting_CostCenterType.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Accounting_Signatory.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
@@ -205,6 +208,9 @@
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\BatchPaymentMaster.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BillBoQItem.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\BillRequisitionApproval.cs">
