--- a/KGERP.Data/App.Config
+++ b/KGERP.Data/App.Config
@@ -15,6 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+	  <!--*********SERVER_CONNECTION**********-->
 	  <add name="ERPEntities" connectionString="metadata=res://*/Models.ERPModel.csdl|res://*/Models.ERPModel.ssdl|res://*/Models.ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.7;initial catalog=TCLErp;persist security info=True;user id=sa;password=kg@123;multiple active result sets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
