--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5588,6 +5588,7 @@
     <Content Include="Views\BillRequisition\BillRequisitionMasterSlave.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionType.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionItem.cshtml" />
+    <Content Include="Views\BillRequisition\BillOfQuotation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
