--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5589,6 +5589,7 @@
     <Content Include="Views\BillRequisition\BillRequisitionType.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionItem.cshtml" />
     <Content Include="Views\BillRequisition\BillOfQuotation.cshtml" />
+    <Content Include="Views\BillRequisition\CostCenterType.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
