--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5590,8 +5590,8 @@
     <Content Include="Views\Report\BankStatementSeed.cshtml" />
     <Content Include="Views\Procurement\ProcurementFieldSalesOrderList.cshtml" />
     <Content Include="Views\Procurement\ProcurementFieldSalesOrderSlave.cshtml" />
-    <Content Include="Views\BillRequisition\PMBillRequisitionReceivedList.cshtml" />
-    <Content Include="Views\BillRequisition\PMBillRequisitionReceivedSlave.cshtml" />
+    <Content Include="Views\BillRequisition\PMBRReceivedList.cshtml" />
+    <Content Include="Views\BillRequisition\PMBRReceivedSlave.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionMasterList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
