--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5593,6 +5593,7 @@
     <Content Include="Views\BillRequisition\PMBRApprovalList.cshtml" />
     <Content Include="Views\BillRequisition\PMBRApproveSlave.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionMasterList.cshtml" />
+    <Content Include="Views\BillRequisition\PMBRRejectSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
