BOQ item and map table

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -222,6 +222,9 @@
     <Compile Include="Models\BillRequisitionItem.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BillRequisitionItemBoQMap.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BillRequisitionMaster.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
