--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5594,6 +5594,7 @@
     <Content Include="Views\BillRequisition\BillRequisitionMasterList.cshtml" />
     <Content Include="Views\BillRequisition\PMBRRejectSlave.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionItemBoQMap.cshtml" />
+    <Content Include="Views\BillRequisition\CommonUnit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
