BoQDivision Table added

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -246,6 +246,9 @@
     <Compile Include="Models\BookingInstallmentType.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BoQDivision.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BoQItemProductMap.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
