CSHTML BR ADDED

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5595,6 +5595,18 @@
     <Content Include="Views\BillRequisition\PMBRRejectSlave.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionItemBoQMap.cshtml" />
     <Content Include="Views\BillRequisition\CommonUnit.cshtml" />
+    <Content Include="Views\BillRequisition\QSBRApproveSlave.cshtml" />
+    <Content Include="Views\BillRequisition\QSBRRejectSlave.cshtml" />
+    <Content Include="Views\BillRequisition\QSBRApprovalList.cshtml" />
+    <Content Include="Views\BillRequisition\PDBRApprovalList.cshtml" />
+    <Content Include="Views\BillRequisition\PDBRApproveSlave.cshtml" />
+    <Content Include="Views\BillRequisition\PDBRRejectSlave.cshtml" />
+    <Content Include="Views\BillRequisition\DirectorBRApprovalList.cshtml" />
+    <Content Include="Views\BillRequisition\DirectorBRApproveSlave.cshtml" />
+    <Content Include="Views\BillRequisition\DirectorBRRejectSlave.cshtml" />
+    <Content Include="Views\BillRequisition\MDBRRejectSlave.cshtml" />
+    <Content Include="Views\BillRequisition\MDBRApproveSlave.cshtml" />
+    <Content Include="Views\BillRequisition\MDBRApprovalList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
