BoQ Division crud done

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5607,6 +5607,7 @@
     <Content Include="Views\BillRequisition\MDBRRejectSlave.cshtml" />
     <Content Include="Views\BillRequisition\MDBRApproveSlave.cshtml" />
     <Content Include="Views\BillRequisition\MDBRApprovalList.cshtml" />
+    <Content Include="Views\BillRequisition\BoqDivision.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
