--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -471,6 +471,7 @@
     <Compile Include="ServiceModel\BillRequisitionItemBoQMapModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionBoqModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
+    <Compile Include="ServiceModel\BoqDivisionModel.cs" />
     <Compile Include="ServiceModel\CostCenterTypeModel.cs" />
     <Compile Include="ServiceModel\BookingHeadServiceModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionTypeModel.cs" />
