edmx userlog and history table

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -213,6 +213,9 @@
     <Compile Include="Models\BillBoQItem.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BillReqApprovalHistory.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BillRequisitionApproval.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
@@ -880,9 +883,6 @@
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\User.cs">
-      <DependentUpon>ERPModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\UserLog.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\UserLogin.cs" />
