Try to calculate

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5608,6 +5608,8 @@
     <Content Include="Views\BillRequisition\MDBRApproveSlave.cshtml" />
     <Content Include="Views\BillRequisition\MDBRApprovalList.cshtml" />
     <Content Include="Views\BillRequisition\BoqDivision.cshtml" />
+    <Content Include="Views\BillRequisition\BillRequisitionMasterCommonList.cshtml" />
+    <Content Include="Views\BillRequisition\BillRequisitionMasterCommonSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
