--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5610,6 +5610,9 @@
     <Content Include="Views\BillRequisition\BoqDivision.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionMasterCommonList.cshtml" />
     <Content Include="Views\BillRequisition\BillRequisitionMasterCommonSlave.cshtml" />
+    <Content Include="Views\BillRequisition\ITHeadBRApprovalList.cshtml" />
+    <Content Include="Views\BillRequisition\ITHeadBRApproveSlave.cshtml" />
+    <Content Include="Views\BillRequisition\ITHeadBRRejectSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
