--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5614,6 +5614,7 @@
     <Content Include="Views\BillRequisition\ITHeadBRApproveSlave.cshtml" />
     <Content Include="Views\BillRequisition\ITHeadBRRejectSlave.cshtml" />
     <Content Include="Views\Configuration\CommonFinishProductRequisition.cshtml" />
+    <Content Include="Views\Collection\BillRequisitionPayment.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
