--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5615,6 +5615,7 @@
     <Content Include="Views\BillRequisition\ITHeadBRRejectSlave.cshtml" />
     <Content Include="Views\Configuration\CommonFinishProductRequisition.cshtml" />
     <Content Include="Views\Collection\BillRequisitionPayment.cshtml" />
+    <Content Include="Views\Vouchers\RequisitionVoucherEntry.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
