User log module added and boq item added in log module

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Implementation\ComplainManagementService.cs" />
     <Compile Include="Implementation\Configuration\CollectionService.cs" />
     <Compile Include="Implementation\Configuration\ConfigurationService.cs" />
+    <Compile Include="Implementation\Configuration\VmUserActionLog.cs" />
     <Compile Include="Implementation\Configuration\VmCommonCurrency.cs" />
     <Compile Include="Implementation\Configuration\VMConfiguration.cs" />
     <Compile Include="Implementation\CreditRecoverService.cs" />
