--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5616,6 +5616,7 @@
     <Content Include="Views\Configuration\CommonFinishProductRequisition.cshtml" />
     <Content Include="Views\Collection\BillRequisitionPayment.cshtml" />
     <Content Include="Views\Vouchers\RequisitionVoucherEntry.cshtml" />
+    <Content Include="Views\Configuration\UserActionLog.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
