--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5617,6 +5617,9 @@
     <Content Include="Views\Collection\BillRequisitionPayment.cshtml" />
     <Content Include="Views\Vouchers\RequisitionVoucherEntry.cshtml" />
     <Content Include="Views\Configuration\UserActionLog.cshtml" />
+    <Content Include="Views\Vouchers\RequisitionVoucherList.cshtml" />
+    <Content Include="Views\Vouchers\RequisitionVoucherApprovalList.cshtml" />
+    <Content Include="Views\Vouchers\RequisitionVoucherApproval.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
