sub contractor work

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5620,6 +5620,7 @@
     <Content Include="Views\Vouchers\RequisitionVoucherList.cshtml" />
     <Content Include="Views\Vouchers\RequisitionVoucherApprovalList.cshtml" />
     <Content Include="Views\Vouchers\RequisitionVoucherApproval.cshtml" />
+    <Content Include="Views\Configuration\CommonSubcontractor.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
