--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -913,6 +913,9 @@
     <Compile Include="Models\VendorType.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Voucher.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\VoucherBRMapDetail.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
