--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5621,6 +5621,7 @@
     <Content Include="Views\Vouchers\RequisitionVoucherApprovalList.cshtml" />
     <Content Include="Views\Vouchers\RequisitionVoucherApproval.cshtml" />
     <Content Include="Views\Configuration\CommonSubcontractor.cshtml" />
+    <Content Include="Views\Report\UnitOfProduct.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
