Custom error handdler added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -469,6 +469,7 @@
     <Compile Include="Controllers\CostHeadsController.cs" />
     <Compile Include="Controllers\Crm\CrmsController.cs" />
     <Compile Include="Controllers\BatchPaymentController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\ProductionMasterController.cs" />
     <Compile Include="Controllers\KGRECustomerMapHeadGlController.cs" />
     <Compile Include="Controllers\MoneyReceiptProcess\RealStateMoneyReceiptController.cs" />
@@ -5624,6 +5625,8 @@
     <Content Include="Views\Report\UnitOfProduct.cshtml" />
     <Content Include="Views\Vouchers\ApproverRequisitionVoucherApprovalList.cshtml" />
     <Content Include="Views\Vouchers\ApproverRequisitionVoucherApproval.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Views\Error\NotFound.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
