--- a/KGERP/Web.config
+++ b/KGERP/Web.config
@@ -50,8 +50,8 @@
   -->
 	<system.web>
 
-		<customErrors mode="On">
-		</customErrors>
+		<!--Default Error-->
+		<!--<customErrors mode="On"></customErrors>-->
 
 		<!--<globalization uiCulture="auto" culture="auto" />-->
 		<globalization culture="en-GB" />
