BRApproval BoqItem and Division cnditionally show bug fixed

--- a/KGERP/Web.config
+++ b/KGERP/Web.config
@@ -408,24 +408,27 @@
 		</providers>
 	</entityFramework>
 
-	<!--********* LIVE_DataBase **********-->
-
-	<!--<connectionStrings>
+	<!--********* LIVE DATABASE **********-->
+	
+	<connectionStrings>
 		<add name="DBConnectionString" connectionString="Data Source=192.168.0.7\sqlexpress;initial catalog=TCLErp;user id=sa;password=kg@123;" providerName="System.Data.SqlClient"/>
 		<add name="ERPEntities" connectionString="metadata=res://*/Models.ERPModel.csdl|res://*/Models.ERPModel.ssdl|res://*/Models.ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.7\sqlexpress;initial catalog=TCLErp;user id=sa;password=kg@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 		<add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Extended Properties='Excel 8.0;IMEX=1;'"/>
 		<add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;IMEX=1;'"/>
-	</connectionStrings>-->
+	</connectionStrings>
 
+	<!--********* LIVE DATABASE **********-->
 
-
-	<!--********* Dev_DB **********-->
-	<connectionStrings>
+	<!--********* TEST DATABASE **********-->
+	
+	<!--<connectionStrings>
 		<add name="DBConnectionString" connectionString="Data Source=192.168.0.7\sqlexpress;initial catalog=TCLErp_Dev;user id=sa;password=kg@123;" providerName="System.Data.SqlClient"/>
 		<add name="ERPEntities" connectionString="metadata=res://*/Models.ERPModel.csdl|res://*/Models.ERPModel.ssdl|res://*/Models.ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.7\sqlexpress;initial catalog=TCLErp_Dev;user id=sa;password=kg@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 		<add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Extended Properties='Excel 8.0;IMEX=1;'"/>
 		<add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;IMEX=1;'"/>
-	</connectionStrings>
+	</connectionStrings>-->
+	
+	<!--********* TEST DATABASE **********-->
 
 	<system.webServer>
 		<validation validateIntegratedModeConfiguration="false" />
