--- a/KGERP.Data/App.Config
+++ b/KGERP.Data/App.Config
@@ -18,10 +18,10 @@
 		<!--********* DATABASE SERVER **********-->
 		
 		<!--********* LIVE DATABASE **********-->
-		<!--<add name="ERPEntities" connectionString="metadata=res://*/Models.ERPModel.csdl|res://*/Models.ERPModel.ssdl|res://*/Models.ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.7;initial catalog=TCLErp;persist security info=True;user id=sa;password=kg@123;multiple active result sets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />-->
+		<add name="ERPEntities" connectionString="metadata=res://*/Models.ERPModel.csdl|res://*/Models.ERPModel.ssdl|res://*/Models.ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.7;initial catalog=TCLErp;persist security info=True;user id=sa;password=kg@123;multiple active result sets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
 
 		<!--********* DEVELOPMENT DATABASE **********-->
-		<add name="ERPEntities" connectionString="metadata=res://*/Models.ERPModel.csdl|res://*/Models.ERPModel.ssdl|res://*/Models.ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.7;initial catalog=TCLErp_Dev;persist security info=True;user id=sa;password=kg@123;multiple active result sets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+		<!--<add name="ERPEntities" connectionString="metadata=res://*/Models.ERPModel.csdl|res://*/Models.ERPModel.ssdl|res://*/Models.ERPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.7;initial catalog=TCLErp_Dev;persist security info=True;user id=sa;password=kg@123;multiple active result sets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />-->
 
 		<!--********* DATABASE SERVER **********-->
 	</connectionStrings>
