Requsition division and boq in detail table

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -303,6 +303,12 @@
     <Compile Include="Models\ComplainType.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ConsumptionDetail.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ConsumptionMaster.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ConvertedProduct.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
