consumption model and interface create

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Implementation\Configuration\VmUserActionLog.cs" />
     <Compile Include="Implementation\Configuration\VmCommonCurrency.cs" />
     <Compile Include="Implementation\Configuration\VMConfiguration.cs" />
+    <Compile Include="Implementation\ConsumptionService.cs" />
     <Compile Include="Implementation\CreditRecoverService.cs" />
     <Compile Include="Implementation\CrmService.cs" />
     <Compile Include="Implementation\Dashboard_service\DashboardService.cs" />
@@ -338,6 +339,7 @@
     <Compile Include="Interface\ICompanyUserMenuService.cs" />
     <Compile Include="Interface\IBoardOfDirectorService.cs" />
     <Compile Include="Interface\IComplainManagementService.cs" />
+    <Compile Include="Interface\IConsumptionService.cs" />
     <Compile Include="Interface\ICreditRecoverService.cs" />
     <Compile Include="Interface\ICrmService.cs" />
     <Compile Include="Interface\IEmployeeLoanCollectionService.cs" />
@@ -473,6 +475,7 @@
     <Compile Include="ServiceModel\BillRequisitionBoqModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
     <Compile Include="ServiceModel\BoqDivisionModel.cs" />
+    <Compile Include="ServiceModel\ConsumptionModel.cs" />
     <Compile Include="ServiceModel\CostCenterTypeModel.cs" />
     <Compile Include="ServiceModel\BookingHeadServiceModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionTypeModel.cs" />
