--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Implementation\BankBranchService.cs" />
     <Compile Include="Implementation\AccountHeadService.cs" />
     <Compile Include="Implementation\BatchPayment\BatchPaymentService.cs" />
+    <Compile Include="Implementation\QuotationService.cs" />
     <Compile Include="Implementation\CompanyUserMenuService.cs" />
     <Compile Include="Implementation\BoardOfDirectorService.cs" />
     <Compile Include="Implementation\ComplainManagementService.cs" />
@@ -335,6 +336,7 @@
     <Compile Include="Interface\IAssignAssetService.cs" />
     <Compile Include="Interface\IBagService.cs" />
     <Compile Include="Interface\IBatchPaymentService.cs" />
+    <Compile Include="Interface\IQuotationService.cs" />
     <Compile Include="Interface\ICompanyUserMenuService.cs" />
     <Compile Include="Interface\IBoardOfDirectorService.cs" />
     <Compile Include="Interface\IComplainManagementService.cs" />
@@ -471,6 +473,7 @@
     <Compile Include="ServiceModel\BatchPaymentMasterModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionItemBoQMapModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionBoqModel.cs" />
+    <Compile Include="ServiceModel\QuotationMasterModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
     <Compile Include="ServiceModel\BoqDivisionModel.cs" />
     <Compile Include="ServiceModel\CostCenterTypeModel.cs" />
