--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -463,6 +463,7 @@
     <Compile Include="Controllers\BagController.cs" />
     <Compile Include="Controllers\BankBranchController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\QuotationController.cs" />
     <Compile Include="Controllers\ConsumptionController .cs" />
     <Compile Include="Controllers\BoardOfDirectorController.cs" />
     <Compile Include="Controllers\ClientBookingController.cs" />
@@ -5629,6 +5630,7 @@
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Consumption\ConsumptionMasterSlave.cshtml" />
+    <Content Include="Views\Quotation\QuotationMasterSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
