Settings for Building added

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -475,6 +475,8 @@
     <Compile Include="ServiceModel\BatchPaymentMasterModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionItemBoQMapModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionBoqModel.cs" />
+    <Compile Include="ServiceModel\BuildingFloorModel.cs" />
+    <Compile Include="ServiceModel\BuildingMemberModel.cs" />
     <Compile Include="ServiceModel\QuotationMasterModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
     <Compile Include="ServiceModel\BoqDivisionModel.cs" />
