--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5631,6 +5631,8 @@
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Consumption\ConsumptionMasterSlave.cshtml" />
     <Content Include="Views\Quotation\QuotationMasterSlave.cshtml" />
+    <Content Include="Views\BillRequisition\AddNewMember.cshtml" />
+    <Content Include="Views\BillRequisition\AddNewFloor.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
