Building Member added & Consumption Master and Detail updated

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -261,6 +261,9 @@
     <Compile Include="Models\BuildingFloor.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BuildingMember.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\CaseComment.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
