--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5633,6 +5633,7 @@
     <Content Include="Views\Quotation\QuotationMasterSlave.cshtml" />
     <Content Include="Views\BillRequisition\AddNewMember.cshtml" />
     <Content Include="Views\BillRequisition\AddNewFloor.cshtml" />
+    <Content Include="Views\Procurement\DirectPurchaseOrderSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
