Cheque Register table added

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -270,6 +270,9 @@
     <Compile Include="Models\CaseHistory.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChequeRegister.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ClientsInfo.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
