Cheque Register Controller Added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -463,6 +463,7 @@
     <Compile Include="Controllers\BagController.cs" />
     <Compile Include="Controllers\BankBranchController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\ChequeRegisterController.cs" />
     <Compile Include="Controllers\QuotationController.cs" />
     <Compile Include="Controllers\ConsumptionController .cs" />
     <Compile Include="Controllers\BoardOfDirectorController.cs" />
@@ -5633,6 +5634,8 @@
     <Content Include="Views\Quotation\QuotationMasterSlave.cshtml" />
     <Content Include="Views\BillRequisition\AddNewMember.cshtml" />
     <Content Include="Views\BillRequisition\AddNewFloor.cshtml" />
+    <Content Include="Views\ChequeRegister\Index.cshtml" />
+    <Content Include="Views\ChequeRegister\NewChequeRegister.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
