Cheque register service added

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -270,6 +270,7 @@
     <Compile Include="Implementation\LandOwnerService.cs" />
     <Compile Include="Implementation\Marketing\VMOrderMaster.cs" />
     <Compile Include="Implementation\ProdMaster\ProductionMasterService.cs" />
+    <Compile Include="Implementation\ChequeRegisterService.cs" />
     <Compile Include="Implementation\RealStateCostHeadService\RealStateCostHead_Service.cs" />
     <Compile Include="Implementation\RealStateMoneyReceipt\MoneyReceiptService.cs" />
     <Compile Include="Implementation\OfficerAssignService.cs" />
@@ -337,6 +338,7 @@
     <Compile Include="Interface\IAssignAssetService.cs" />
     <Compile Include="Interface\IBagService.cs" />
     <Compile Include="Interface\IBatchPaymentService.cs" />
+    <Compile Include="Interface\IChequeRegisterService.cs" />
     <Compile Include="Interface\IQuotationService.cs" />
     <Compile Include="Interface\ICompanyUserMenuService.cs" />
     <Compile Include="Interface\IBoardOfDirectorService.cs" />
@@ -477,6 +479,7 @@
     <Compile Include="ServiceModel\BillRequisitionBoqModel.cs" />
     <Compile Include="ServiceModel\BuildingFloorModel.cs" />
     <Compile Include="ServiceModel\BuildingMemberModel.cs" />
+    <Compile Include="ServiceModel\ChequeRegisterModel.cs" />
     <Compile Include="ServiceModel\QuotationMasterModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionMasterModel.cs" />
     <Compile Include="ServiceModel\BoqDivisionModel.cs" />
