Cheque signing done

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5634,7 +5634,7 @@
     <Content Include="Views\Quotation\QuotationMasterSlave.cshtml" />
     <Content Include="Views\BillRequisition\AddNewMember.cshtml" />
     <Content Include="Views\BillRequisition\AddNewFloor.cshtml" />
-    <Content Include="Views\ChequeRegister\Index.cshtml" />
+    <Content Include="Views\ChequeRegister\ChequeSingning.cshtml" />
     <Content Include="Views\ChequeRegister\NewChequeRegister.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
