--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5636,6 +5636,7 @@
     <Content Include="Views\BillRequisition\AddNewFloor.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeSingning.cshtml" />
     <Content Include="Views\ChequeRegister\NewChequeRegister.cshtml" />
+    <Content Include="Views\ChequeRegister\ChequeRegisterList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
