Cheque print page added and some bug fixed

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5637,6 +5637,7 @@
     <Content Include="Views\ChequeRegister\ChequeSigning.cshtml" />
     <Content Include="Views\ChequeRegister\NewChequeRegister.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeRegisterReport.cshtml" />
+    <Content Include="Views\ChequeRegister\ChequePrinting.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
