New Cheque Book Added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5638,6 +5638,7 @@
     <Content Include="Views\ChequeRegister\NewChequeRegister.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeRegisterReport.cshtml" />
     <Content Include="Views\ChequeRegister\ChequePrinting.cshtml" />
+    <Content Include="Views\ChequeRegister\NewChequeBook.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
