Bank A/C Information page added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5639,6 +5639,7 @@
     <Content Include="Views\ChequeRegister\ChequeRegisterReport.cshtml" />
     <Content Include="Views\ChequeRegister\ChequePrinting.cshtml" />
     <Content Include="Views\ChequeRegister\NewChequeBook.cshtml" />
+    <Content Include="Views\ChequeRegister\BankAccountInformation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
