--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -201,6 +201,9 @@
     <Compile Include="Models\Bank.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BankAccountInfo.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BankBranch.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
