adding Budget & Estimating approval list page

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5640,6 +5640,8 @@
     <Content Include="Views\ChequeRegister\ChequePrinting.cshtml" />
     <Content Include="Views\ChequeRegister\NewChequeBook.cshtml" />
     <Content Include="Views\ChequeRegister\BankAccountInformation.cshtml" />
+    <Content Include="Views\BillRequisition\BillRequisitionItemApprovalList.cshtml" />
+    <Content Include="Views\BillRequisition\BillRequisitionItemApproveSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
