BoqBNEApprovalHistory table added by edmx

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -252,6 +252,9 @@
     <Compile Include="Models\BookingInstallmentType.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BoqBNEApprovalHistroy.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BoQDivision.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
