Fuel approval page added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5642,6 +5642,9 @@
     <Content Include="Views\ChequeRegister\BankAccountInformation.cshtml" />
     <Content Include="Views\BillRequisition\BudgetAndEstimatingApprovalList.cshtml" />
     <Content Include="Views\BillRequisition\BudgetAndEstimatingApproveSlave.cshtml" />
+    <Content Include="Views\BillRequisition\FuelBRRejectSlave.cshtml" />
+    <Content Include="Views\BillRequisition\FuelBRApproveSlave.cshtml" />
+    <Content Include="Views\BillRequisition\FuelBRApprovalList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
