budget and estimating list creat and updated

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5645,6 +5645,7 @@
     <Content Include="Views\BillRequisition\FuelBRRejectSlave.cshtml" />
     <Content Include="Views\BillRequisition\FuelBRApproveSlave.cshtml" />
     <Content Include="Views\BillRequisition\FuelBRApprovalList.cshtml" />
+    <Content Include="Views\BillRequisition\BudgetAndEstimatingApproval.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
