Quotation list page added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5646,6 +5646,7 @@
     <Content Include="Views\BillRequisition\FuelBRApproveSlave.cshtml" />
     <Content Include="Views\BillRequisition\FuelBRApprovalList.cshtml" />
     <Content Include="Views\BillRequisition\BudgetAndEstimatingApproval.cshtml" />
+    <Content Include="Views\Quotation\GetQuotationDetail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
