--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5648,6 +5648,7 @@
     <Content Include="Views\BillRequisition\BudgetAndEstimatingApproval.cshtml" />
     <Content Include="Views\Quotation\GetQuotationDetail.cshtml" />
     <Content Include="Views\Quotation\ComparativeStatement.cshtml" />
+    <Content Include="Views\Quotation\QuotationType.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
